5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1692_1879.log
== TEST (2019-05-02 13:42:38) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = h - 1/4 * f
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    h = h - 1/4 * f
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:42:50) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = h - 1/4 * f
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    h = h - 1/4 * f
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:42:55) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
-- OUTPUT:
420.0 extras e 20.0 de falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:43:05) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
-- OUTPUT:
420.0 extras e 20.0 de falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:45:07) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$ 400.0")
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$ 100.0")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:45:17) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$ 400.0")
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$ 100.0")
-- EXECUTION TIME:
0.138886
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:45:18) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$ 400.0")
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$ 100.0")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:46:25) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = 400
c = 100
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print(round("R$",q, 2))
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print(round("R$",c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round("R$",q, 2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:46:31) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = 400
c = 100
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print(round("R$",q, 2))
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print(round("R$",c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round("R$",q, 2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:46:48) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = 400
c = 100
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print(round("R$" + q, 2))
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print(round("R$" + c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round("R$" + q, 2))
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:46:56) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = 400
c = 100
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print(round("R$" + q, 2))
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print(round("R$" + c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round("R$" + q, 2))
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:47:25) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400, 2)
c = round(100, 2)
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$" + q)
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$" + c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("R$" + q)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:47:35) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400, 2)
c = round(100, 2)
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$" + q)
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$" + c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("R$" + q)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:47:41) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400, 2)
c = round(100, 2)
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$",q)
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:47:57) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400, 2)
c = round(100, 2)
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$",q)
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.141174
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:47:57) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400, 2)
c = round(100, 2)
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$",q)
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:48:03) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$",q)
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:48:09) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$",q)
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.24601
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:48:10) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$",q)
elif h<=400 and h>0:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:49:11) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
elif h<=400:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:49:16) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
elif h<=400:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.167286
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:49:17) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
elif h<=400:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:50:06) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.197799
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:50:07) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:50:15) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.123994
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:50:17) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.180594
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:50:17) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:50:17) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.189857
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:50:18) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.247903
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:50:18) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.436271
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:50:18) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.67344
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:50:18) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.597712
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:50:18) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.608985
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:50:18) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.592797
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:

-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:50:19) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - 1/4 * f
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.265408
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:52:46) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - (1/4 * f)
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.184008
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 400.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:52:47) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - (1/4 * f)
q = round(400., 2)
c = round(100., 2)
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:54:41) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - (1/4 * f)
q = 500
c = 100
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:54:47) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - (1/4 * f)
q = 500.0
c = 100.0
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:55:02) 
-- CODE:
e = float(input("digite as horas extras: "))
f = float(input("digite as faltas: "))
h = e - (1/4 * f)
q = 500.0
c = 100.0
if h > 400:
	print(e,"extras e",f,"de falta")
	print("R$",q)
else:
	print(e,"extras e",f,"de falta")
	print("R$",c)
-- EXECUTION TIME:
0.212015
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
